2006-09-30  Doug Hellmann  <dhellmann@racemi.com>

	* urls.py (urlpatterns): Do not include the project name in
	imports or view names.  Use the generic view for handling logins
	that do not have a "next" value.
