@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "three_columns.html" %}
 
 <!-- $Id$ -->
 
