@@ -1,7 +1,7 @@
 <!-- $Id$ -->
 {% extends "three_columns.html" %}
 
-{% block title %}{{user.username}}{% endblock %}
+{% block title %}{{ user }}{% endblock %}
 
 {% block content %}
 
