@@ -1,6 +1,8 @@
 <!-- $Id$ -->
 {% extends "base.html" %}
 
+{% block title %}{% endblock %}
+
 {% block body %}
 
 {% block sidebar_l_wrapper %}
